# donna

./: .gitignore  CLAUDE.md  SECURITY-ARCHITECTURE-v4.md
.claude/: HOOK_RESTORE.md  settings.json
broker/: .importlinter  CLAUDE.md  HANDOFF.md  __init__.py  audit.py  browser_agent.py  browser_gate.py  browser_ledger.py  browser_nav.py  browser_profile.py  browser_runner.py  browser_sanitise.py  browser_token.py  canonicalize.py  creds.py  executor.py  grants_db.py  main.py  pack_format.py  pack_keys.py  pack_token.py  pack_verify.py  policy.py  promoter.py  promoter_daemon.py  promoter_fs.py  promoter_ledger.py  pyproject.toml  requests_db.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  resolver.py  validator.py  vault_health.py
broker/docs/: browser-goal-security-core.md  donna-security-v1-amendment-14.1.md  promoter-deploy.md  promoter-security-core.md
broker/executors/: browser_goal  everyone_active_book  everyone_active_checkout  everyone_active_site_check  promoter_client
broker/manifests/: capabilities.test.yaml  capabilities.yaml  mcp-tools.yaml
broker/manifests/profiles/: everyone_active.json
broker/manifests/schemas/: browser_goal_commit.json  browser_goal_plan.json  everyone_active_book.json  everyone_active_checkout.json  gcal_create_event.json  gmail_create_draft.json  gmail_send.json  notion_create_database.json  notion_create_pages.json  notion_create_view.json  notion_update_data_source.json  notion_update_page.json  promoter_install_pack.json
broker/packs/tesco/: manifest.yaml  meta.json
broker/packs/tesco/profiles/: tesco.json
broker/ralph-prompts/: audit.md  canonicalize.md  executor.md  policy.md  requests_db.md  resolver.md  validator.md
broker/tests/: canonicalize_vectors.json  conftest.py  test_audit.py  test_browser_agent.py  test_browser_gate.py  test_browser_goal_executor.py  test_browser_ledger.py  test_browser_nav.py  test_browser_profile.py  test_browser_runner.py  test_browser_sanitise.py  test_browser_token.py  test_canonicalize.py  test_creds.py  test_executor.py  test_grants_db.py  test_main.py  test_pack_format.py  test_pack_keys.py  test_pack_token.py  test_pack_verify.py  test_policy.py  test_promoter.py  test_promoter_client.py  test_promoter_daemon.py  test_promoter_fs.py  test_promoter_ledger.py  test_requests_db.py  test_resolver.py  test_sign_pack.py  test_sites_modes.py  test_synthetic_e2e.py  test_validator.py  test_vault_health.py
broker/tests/schemas/: puregym_book.json
broker/tools/: sign_pack.py
data/: donna-memory.db
hooks/: audit-post-phase1.py  audit-post.sh  capability-guard-phase1.py  capability-guard.sh  session-start.py  test_capability_guard_phase1.py
ops/: CONNECTED_SITES_DEPLOY.md  PHASE_1_DEPLOY.md  PHASE_1_GATE.md  PHASE_2_DEPLOY.md  com.donna.broker.verify-audit.plist  (+11 more)
tools/donna-recon/: README.md  donna-recon  pyproject.toml  requirements-dev.in  requirements.in
tools/donna-recon/donna_recon/: __init__.py  __main__.py  browser.py  cli.py  dom_redact.py  indicator.js  paths.py  recorder.py  redact.py  slug.py  writer.py
tools/donna-recon/tests/: conftest.py  test_dom_redact.py  test_paths.py  test_redact.py  test_slug.py  test_writer.py
(+64 files in other folders)
